@@ -255,6 +255,9 @@ resort for legacy applications.
 
 *** System ***
 
+* Multithreading for Poly/ML 5.1 is no longer supported, only for
+Poly/ML 5.2 or later.
+
 * The Isabelle "emacs" tool provides a specific interface to invoke
 Proof General / Emacs, with more explicit failure if that is not
 installed (the old isabelle-interface script silently falls back on
